// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H1 Snapshot using custom styles 1`] = `
<div
  className="jsx-4045736156"
  style={
    Object {
      "borderRadius": "20px",
      "padding": "0",
    }
  }
>
  <h1>
    Card Test
  </h1>
</div>
`;

exports[`Component H1 Snapshot without arguments, take the default values 1`] = `
<div
  className="jsx-4045736156"
  style={Object {}}
>
  <h1>
    Card Test
  </h1>
</div>
`;
